--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>John Doe</strong>
+                <strong>B Naveen Krishna </strong>
                 and I'm a <strong> Frontend Web Developer </strong> located in
                 Los Angeles. I've done
                 <strong> remote </strong>
@@ -389,7 +389,7 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">B Naveen Krishna </h4>
             <p class="main-footer__short-desc">
               Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
               tempora explicabo quae quod deserunt
