--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+              src="C:\Users\navee\Downloads\image\40 - 2_page-0001.jpg"
+              alt="40 - 2_page-0001"
               class="header__logo-img"
             />
           </div>
